--- a/BeatPad/package.json
+++ b/BeatPad/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "WebSocket server for BeatPad multiplayer",
   "main": "server.js",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "start": "node server.js"
   },
